k8s-resources/pushgateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pushgateway
  name: pushgateway
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pushgateway
  sessionAffinity: None
  type: ClusterIP
