k8s-resources/pushgateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pushgateway
  name: pushgateway
  namespace: pushgateway
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: pushgateway
    weight: 100
  wildcardPolicy: None
