k8s-resources/pushgateway/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pushgateway-networkpolicy
  namespace: pushgateway
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: pushgateway
  policyTypes:
  - Ingress
